<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="MAIN" Id="{8cc3ee42-67a9-4667-b58e-96feb4991c55}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	SysCommand		:SystemCommand;
	testProcessValue:Prozessvariablen; 
	
	Switch		:BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Anlage();

IF NOT SWITCH THEN
	testProcessValue.x := 0.2;
	testProcessValue.y := 0.3;
	testProcessValue.z := 0.65;
	testProcessValue.rx := -1.2;
	testProcessValue.ry := 1.25;
	testProcessValue.rz := -1.3;
	testProcessValue.a := 0.1;
	testProcessValue.v := 0.2;
	testProcessValue.MoveTyp := 0;
	testProcessValue.PosTyp := 0;
END_IF

IF SWITCH THEN
	testProcessValue.x := 0.25;
	testProcessValue.y := 0.3;
	testProcessValue.z := 0.5;
	testProcessValue.rx := -1.2;
	testProcessValue.ry := 1.25;
	testProcessValue.rz := -1.3;
	testProcessValue.a := 0.1;
	testProcessValue.v := 0.2;
	testProcessValue.MoveTyp := 0;
	testProcessValue.PosTyp := 0;
END_IF
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>